#
#   Copyright (C) 2017-2022 CASM Organization <https://casm-lang.org>
#   All rights reserved.
#
#   Developed by: Philipp Paulweber et al.
#                 <https://github.com/casm-lang/casmd/graphs/contributors>
#
#   This file is part of casmd.
#
#   casmd is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.
#
#   casmd is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with casmd. If not, see <http://www.gnu.org/licenses/>.
#

# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "casmd"
version = "0.0.0"
edition = "2021"
authors = [ "Philipp Paulweber et al."]
description = "Corinthian Abstract State Machine (CASM) Language Server Daemon"
homepage = "https://casm-lang.org/"
repository = "https://github.com/casm-lang/casmd/"
license-file = "LICENSE.txt"
# keywords = [""]
# categories = [""] # https://crates.io/category_slugs
include = [
    "src/**.rs",
    "Cargo.toml",
]
